fix EDIT ARTICLE api
